src/views/Todo.css
button,
input {
  overflow: visible;
}
input {
  width: 10%;
}
body {
    width: 100%;
    margin: 0 auto;
    color: white;
  }
.form-group > input[type="text"] {
    display: inline-block;
    margin-top: 0.4rem;
  }
  .btn {
    padding: 0.8rem 1rem 0.7rem;
    color: hsl(0, 0%, 21%);
    border: 0.2rem solid rgb(93, 117, 197);
    cursor: pointer;
    text-transform: uppercase;
    border-radius: 5px;
  }
  .btn.toggle-btn {
    border-width: 2px;
    font-weight: bold;
    color:hsl(0, 0%, 21%);
  }
  .btn.toggle-btn[aria-pressed="true"] {
    border-color: hsl(0, 0%, 21%);
    border-width: 3px;
    font-weight: bold;
  }
  .btn__danger {
    color: #fff;
    background-color: hsl(0, 0%, 21%);
  }
  .btn__filter {
    border-color: lightgrey;
  }

  .btn_e_d {
    max-width: 30%;
  }

  .btn__primary {
    max-width: 30%;
    color: #fff;
    background-color:hsl(0, 0%, 21%);
  }
  .btn-group {
    display: flex;
    align-content: space-between;
    justify-content: center;
  }
  .btn-group > * {
    flex: 1 1 49%;
  }
  .btn-group > * + * {
    margin-left: 0.8rem;
  }
  .label-wrapper {
    margin: 0;
    flex: 0 0 100%;
    text-align: center;
  }

  [class*="stack"] > * {
    margin-top: 0;
    margin-bottom: 0;
  }
  .stack-small > * + * {
    margin-top: 1.25rem;
  }
  .stack-large > * + * {
    margin-top: 2.5rem;
  }
  @media screen and (min-width: 550px) {
    .stack-small > * + * {
      margin-top: 1.4rem;
    }
    .stack-large > * + * {
      margin-top: 2.8rem;
    }
  }
  .stack-exception {
    margin-top: 1.2rem;
  }

#list-heading {
  color:hsl(0, 0%, 21%);
  text-decoration: underline;
}
.list {
  border: 10px solid white;
  border-radius: 2px;
  padding: 2%;
}


.todoapp {
    margin: 2rem 0 4rem 0;
    padding: 1rem;
    position: relative;
  }
  @media screen and (min-width: 550px) {
    .todoapp {
      padding: 4rem;
    }
  }
  .todoapp > * {
    max-width: 50rem;
    margin-left: auto;
    margin-right: auto;
  }
  .todoapp > form {
    max-width: 100%;
  }
  .todoapp > h1 {
    display: block;
    max-width: 100%;
    text-align: center;
    margin: 0;
    margin-bottom: 1rem;
  }
  .label__lg {
    line-height: 1.01567;
    font-weight: 300;
    padding: 0.8rem;
    margin-bottom: 1rem;
    text-align: center;
  }
  .input__lg {
    max-width: 40%;
    padding: 2rem;
    border: 2px solid rgb(93, 117, 197);;
  }
  .input__lg:focus {
    border-color: #4d4d4d;
    box-shadow: inset 0 0 0 2px;
  }
  [class*="__lg"] {
    display: inline-block;
    width: 100%;
    font-size: 1.9rem;
  }
  [class*="__lg"]:not(:last-child) {
    margin-bottom: 1rem;
  }
  @media screen and (min-width: 620px) {
    [class*="__lg"] {
      font-size: 50px;
    }
  }

.filters {
    width: 100%;
    margin: unset auto;
    margin-top: 8%;
  }
  /* Todo item styles */
  .todo {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
  }
  .todo > * {
    flex: 0 0 100%;
  }
  .todo-text {
    width: 100%;
    min-height: 4.4rem;
    padding: 0.4rem 0.8rem;
    border: 2px solid #565656;
  }
  .todo-text:focus {
    box-shadow: inset 0 0 0 2px;
  }
  /* CHECKBOX STYLES */
  .c-cb {
    box-sizing: border-box;
    font-family: Arial, sans-serif;
    -webkit-font-smoothing: antialiased;
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 1.25;
    display: block;
    position: relative;
    min-height: 44px;
    padding-left: 40px;
    clear: left;
  }
  .c-cb > label::before,
  .c-cb > input[type="checkbox"] {
    box-sizing: border-box;
    top: -2px;
    left: -2px;
    width: 44px;
    height: 44px;
  }
  .c-cb > input[type="checkbox"] {
    -webkit-font-smoothing: antialiased;
    cursor: pointer;
    position: absolute;
    z-index: 1;
    margin: 0;
    opacity: 0;
  }
  .c-cb > label {
    font-size: inherit;
    font-family: inherit;
    line-height: inherit;
    display: inline-block;
    margin-bottom: 0;
    padding: 8px 15px 5px;
    cursor: pointer;
    touch-action: manipulation;
  }
  .c-cb > label::before {
    content: "";
    position: absolute;
    border: 2px solid currentColor;
    background: transparent;
  }
  .c-cb > input[type="checkbox"]:focus + label::before {
    border-width: 4px;
    outline: 3px dashed #228bec;
  }
  .c-cb > label::after {
    box-sizing: content-box;
    content: "";
    position: absolute;
    top: 11px;
    left: 9px;
    width: 18px;
    height: 7px;
    transform: rotate(-45deg);
    border: solid;
    border-width: 0 0 5px 5px;
    border-top-color: transparent;
    opacity: 0;
    background: transparent;
  }
  .c-cb > input[type="checkbox"]:checked + label::after {
    opacity: 1;
  }

